center text aligned correctly

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,8 @@ h1 {
 }
 
 h3 {
-	font-size: 24px;
+	margin-top: 1.25rem;
+	font-size: 1.563rem;
 }
 
 /* Button */
